--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,5 +25,10 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+      - name: Configure GPG Key
+        run: |
+          echo -n "$GPG_SIGNING_KEY" | base64 --decode | gpg --import
+        env:
+          GPG_SIGNING_KEY: ${{ secrets.GPG_SIGNING_KEY }}
       - name: Run the Maven verify phase
         run: mvn --batch-mode --update-snapshots verify
