--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,23 @@
 
     <groupId>io.github.adclarky</groupId>
     <artifactId>chessboard</artifactId>
-    <version>2.0.0</version>
-
+    <version>2.0.1</version>
+    <description>Standard Chessboard with a few Chess related features such as PGN parsing and
+    FEN string generation</description>
+    <url>https://github.com/AdClarky/chessboard</url>
+    <developers>
+        <developer>
+            <id>adclarky</id>
+            <name>Toby</name>
+        </developer>
+    </developers>
+    <licenses>
+        <license>
+            <name>The MIT License</name>
+            <url>https://raw.githubusercontent.com/AdClarky/chessboard/main/LICENSE</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
@@ -64,14 +79,18 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.sonatype.plugins</groupId>
-                <artifactId>nexus-staging-maven-plugin</artifactId>
-                <version>1.6.7</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-project-info-reports-plugin</artifactId>
+                <version>3.6.1</version>
+            </plugin>
+            <plugin>
+                <groupId>org.sonatype.central</groupId>
+                <artifactId>central-publishing-maven-plugin</artifactId>
+                <version>0.5.0</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
-                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                    <publishingServerId>central</publishingServerId>
+                    <autoPublish>true</autoPublish>
                 </configuration>
             </plugin>
             <plugin>
@@ -101,9 +120,13 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub AdClarky Apache Maven Packages</name>
-            <url>https://maven.pkg.github.com/AdClarky/chessboard</url>
+            <name>GitHub Repo</name>
+            <url>https://github.com/AdClarky/chessboard</url>
         </repository>
     </distributionManagement>
-
+    <scm>
+        <connection>scm:git:git@github.com:adclarky/chessboard.git</connection>
+        <developerConnection>scm:git:ssh://github.com:adclarky/chessboard.git</developerConnection>
+        <url>https://github.com/adclarky/chessboard</url>
+    </scm>
 </project>
