--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
                 <version>2.9.1</version>
                 <configuration>
                     <detectJavaApiLink>false</detectJavaApiLink>
+                    <quiet>true</quiet>
                 </configuration>
                 <executions>
                     <execution>
