--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,7 +26,9 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
       - name: List secret keys
-        run: gpg --list-secret-keys --keyid-format LONG
+        run: |
+          cat <(echo -e "${{ secrets.OSSRH_GPG_SECRET_KEY }}")
+          gpg --list-secret-keys --keyid-format LONG
       - id: install-secret-key
         name: Install gpg secret key
         run: |
